--- a/app/src/main/res/layout/item_schedule.xml
+++ b/app/src/main/res/layout/item_schedule.xml
@@ -1,67 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="12dp">
+    android:padding="12dp"
+    android:layout_margin="4dp">
 
-    <LinearLayout
-        android:id="@+id/timingView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/startTimeTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/advent_pro_semibold"
-            android:gravity="center_horizontal"
-            android:text="10:00AM"
-            android:textColor="#3251FF"
-            android:textSize="20sp" />
-        <TextView
-            android:id="@+id/toTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="to"
-            android:gravity="center_horizontal"/>
-
-        <TextView
-            android:id="@+id/endTimeTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/advent_pro_semibold"
-            android:gravity="center_horizontal"
-            android:text="11:00AM"
-            android:textColor="#27FF31"
-            android:textSize="20sp" />
-    </LinearLayout>
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/timingView"
-        android:orientation="vertical"
-        android:layout_marginLeft="8dp"
-        android:layout_alignBottom="@id/timingView"
-        android:layout_alignTop="@id/timingView">
+        android:padding="8dp">
 
-        <TextView
-            android:id="@+id/scheduleTitle"
+        <LinearLayout
+            android:id="@+id/timingView"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:text="Foundation of Computer Science"
-            android:layout_weight="1"
-            android:textSize="20sp" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/scheduleDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="Rinkaj Goyal Sir"/>
+            <TextView
+                android:id="@+id/startTimeTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/advent_pro_semibold"
+                android:gravity="center_horizontal"
+                android:text="10:00AM"
+                android:textColor="#3251FF"
+                android:textSize="20sp" />
+            <TextView
+                android:id="@+id/toTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="to"
+                android:gravity="center_horizontal"/>
 
-    </LinearLayout>
-</RelativeLayout>
+            <TextView
+                android:id="@+id/endTimeTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/advent_pro_semibold"
+                android:gravity="center_horizontal"
+                android:text="11:00AM"
+                android:textColor="#27FF31"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/timingView"
+            android:orientation="vertical"
+            android:paddingLeft="16dp"
+            android:layout_alignBottom="@id/timingView"
+            android:layout_alignTop="@id/timingView">
+
+            <TextView
+                android:id="@+id/scheduleTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Foundation of Computer Science"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/scheduleDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:fontFamily="@font/advent_pro_semibold"
+                android:ellipsize="end"
+                android:textSize="16sp"
+                android:text="Rinkaj Goyal Sir"/>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
