--- a/app/src/main/res/layout/fragment_subscribed_room_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_subscribed_room_bottom_sheet.xml
@@ -67,4 +67,12 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"/>
 
+    <ImageView
+        android:id="@+id/imgNoSubscribedRoom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_face"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
+
 </RelativeLayout>
