--- a/app/src/main/res/layout/fragment_select_room.xml
+++ b/app/src/main/res/layout/fragment_select_room.xml
@@ -15,5 +15,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"/>
+    <ImageView
+        android:id="@+id/imgNoRoomFound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_face"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
 
 </RelativeLayout>
