--- a/app/src/main/res/layout/fragment_view_subscribed_room_schedule.xml
+++ b/app/src/main/res/layout/fragment_view_subscribed_room_schedule.xml
@@ -18,4 +18,10 @@
         android:layout_height="match_parent"
         android:layout_below="@id/daySpinner" />
 
+    <ProgressBar
+        android:id="@+id/pbViewRoom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
+
 </RelativeLayout>
