--- a/app/src/main/res/layout/fragment_view_subscribed_room_schedule.xml
+++ b/app/src/main/res/layout/fragment_view_subscribed_room_schedule.xml
@@ -24,4 +24,12 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"/>
 
+    <ImageView
+        android:id="@+id/imgNoSchedule"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:src="@drawable/ic_face"
+        android:visibility="gone"/>
+
 </RelativeLayout>
