theme changed to dark

--- a/app/src/main/res/layout/fragment_add_room.xml
+++ b/app/src/main/res/layout/fragment_add_room.xml
@@ -25,6 +25,10 @@
         android:id="@+id/createRoom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg_fab"
+        android:textColor="#fff"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:text="create Room now"/>
     <ProgressBar
         android:id="@+id/pbCreateRoom"
