--- a/app/src/main/res/layout/fragment_subscribe_new_room.xml
+++ b/app/src/main/res/layout/fragment_subscribe_new_room.xml
@@ -19,5 +19,9 @@
         android:id="@+id/subscribeNewRoomButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg_fab"
+        android:textColor="#fff"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:text="subscribe"/>
 </LinearLayout>
