--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#3d3d3d">
 
         <TextView
             android:id="@+id/tvTodaySchedule"
@@ -21,6 +22,7 @@
             android:paddingStart="16dp"
             android:paddingLeft="16dp"
             android:textSize="20sp"
+            android:textColor="#fff"
             android:layout_marginTop="12dp"
             android:fontFamily="@font/roboto"/>
 
