--- a/app/src/main/res/layout/fragment_room_detail.xml
+++ b/app/src/main/res/layout/fragment_room_detail.xml
@@ -79,9 +79,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:background="@color/green"
+        android:background="@drawable/bg_fab"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
+        android:textColor="#fff"
         android:text="Share Details"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
