--- a/app/src/main/res/layout/fragment_subscribed_room_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_subscribed_room_bottom_sheet.xml
@@ -63,7 +63,7 @@
         android:gravity="center"
         android:textSize="20sp"
         android:textColor="#fff"
-        android:background="@color/green"
+        android:background="@color/MyTint"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"/>
 
