--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,9 @@
     <color name="green">#53A218</color>
     <color name="lightGreen">#C6EAAC</color>
     <color name="grey">#737373</color>
+    <color name="MyPrimary">#1F1F1F</color>
+    <color name="MyPrimaryDark">#111111</color>
+    <color name="MyTextSecondary">#949494</color>
+    <color name="MyTextPrimary">#E0E0E0</color>
+    <color name="MyTint">#BA85FB</color>
 </resources>
